<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/yearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_tag"
        app:layout_constraintBottom_toTopOf="@+id/yearBox"
        app:layout_constraintStart_toStartOf="@+id/yearBox" />

    <EditText
        android:id="@+id/aprBox"
        android:layout_width="209dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/apr_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/escrowBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/escrowBox"
        app:layout_constraintTop_toBottomOf="@+id/yearBox" />

    <EditText
        android:id="@+id/escrowBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/escrow_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/loanBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loanBox"
        app:layout_constraintTop_toBottomOf="@+id/aprBox" />

    <EditText
        android:id="@+id/loanBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/loan_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/escrowBox" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:text="@string/plus_btn"
        app:layout_constraintBottom_toBottomOf="@+id/yearBox"
        app:layout_constraintStart_toEndOf="@+id/yearBox"
        app:layout_constraintTop_toTopOf="@+id/yearBox"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/minButton"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/minus_btn"
        app:layout_constraintBottom_toBottomOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@+id/plusButton"
        app:layout_constraintTop_toTopOf="@+id/plusButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="367dp"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="129dp"
        android:layout_height="71dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="31dp"
        android:text="@string/calc_btn"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanBox" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="129dp"
        android:layout_height="71dp"
        android:layout_marginStart="60dp"
        android:text="@string/reset_btn"
        app:layout_constraintBottom_toBottomOf="@+id/calcButton"
        app:layout_constraintStart_toEndOf="@+id/calcButton"
        app:layout_constraintTop_toTopOf="@+id/calcButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bottomText"
        android:layout_width="371dp"
        android:layout_height="17dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="4dp"
        android:text="@string/footer_text"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yearBox"
        android:layout_width="209dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:text="@string/year_low"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/aprBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/aprBox"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="%"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/aprBox"
        app:layout_constraintStart_toEndOf="@+id/aprBox"
        app:layout_constraintTop_toTopOf="@+id/aprBox" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/escrowBox"
        app:layout_constraintEnd_toStartOf="@+id/escrowBox"
        app:layout_constraintTop_toTopOf="@+id/escrowBox"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/loanBox"
        app:layout_constraintEnd_toStartOf="@+id/loanBox"
        app:layout_constraintTop_toTopOf="@+id/loanBox"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/aprError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Invalid APR!"
        android:textColor="#D10000"
        app:layout_constraintBottom_toBottomOf="@+id/aprBox"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/aprBox"
        app:layout_constraintVertical_bias="0.769" />

    <TextView
        android:id="@+id/escrowError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="Invalid Escrow!"
        android:textColor="#CD0000"
        app:layout_constraintBottom_toBottomOf="@+id/escrowBox"
        app:layout_constraintStart_toEndOf="@+id/escrowBox"
        app:layout_constraintTop_toTopOf="@+id/escrowBox" />

</androidx.constraintlayout.widget.ConstraintLayout>

